# constrained-bimanual-planning-example

./: .gitignore  Dockerfile  LICENSE.md  README.md  package.xml
cpp/: CMakeLists.txt  README.md  test.py
cpp/iiwa_ik/: CMakeLists.txt  bindings.cc  constraints.cc  iiwa_analytic_ik.cc
cpp_parameterization/: CMakeLists.txt  README.md
cpp_parameterization/cpp/: CMakeLists.txt
cpp_parameterization/cpp/iiwa_ik/: bindings.cc  constraints.cc  constraints.h  costs.cc  costs.h  iiwa_analytic_ik.cc  iiwa_analytic_ik.h  parameterization.cc  parameterization.h
cpp_parameterization/python/iiwa_ik/: __init__.py
cpp_parameterization/test/: test.py
docker/: Dockerfile  README.md
docker/deepnote/: Dockerfile
models/: directives.dmd.yaml  directives.yaml  iiwa14_convex_decimated_collision.urdf  metal_table.sdf  new_shelves.dmd.yaml  old_shelves.dmd.yaml  old_shelves.sdf  wall.sdf  wooden_table.sdf
models/shelves/: IiwaShelvesUpdated.mtl  shelves.sdf
models/wsg_finray/: wsg50_110_finray_fingers_box_collision.sdf
notebooks/: main.ipynb  main_cpp.ipynb
notebooks/.ipynb_checkpoints/: main-checkpoint.ipynb
src/: common.py  iiwa_analytic_ik.py  rrt.py  shortcut.py
